--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ scrapy = "*"
 psycopg2-binary = "*"
 cleanco = {git = "https://github.com/vkelk/cleanco"}
 pandas = "*"
+sqlalchemy = "*"
 
 [requires]
 python_version = "3.7"
